--- a/newtab.html
+++ b/newtab.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>静态网页</title>
+    <title>New Tab</title>
     <link type="text/css" rel="stylesheet" href="style.css" />
 </head>
 
